LPS-102664 | LPS-108176 Fix overflow height on modal's

--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_app.scss
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_app.scss
@@ -93,3 +93,7 @@
 		overflow: auto;
 	}
 }
+
+.modal-open .modal {
+	overflow: auto !important;
+}
